@@ -6,6 +6,7 @@ Date: ????
     - Fixed on spaceships, that extra space platform may be present when inserting a stage.
     - Fixed that tiles may sometimes not be fixed when rebuilding a stage.
     - Fixed that importing a space platform project would use normal world surfaces instead.
+    - Fixed that creating a platform with a quality starter pack would not create a quality platform... as if anyone would want to do that
     - Fixed not being able to take a blueprint of a stage that includes tiles but not entities.
 ---------------------------------------------------------------------------------------------------
 Version: 2.10.1
